# rust-hello-cli

./: .travis.yml  Cargo.toml  LICENSE  Readme.md
src/: cli.rs  lib.rs  main.rs
tests/: lib.rs
