[package]
name = "hello-cli"
version = "0.1.3"
authors = ["Federico Poli <federpoli@gmail.com>"]
repository = "https://github.com/fpoli/rust-hello-cli.git"
homepage = "https://github.com/fpoli/rust-hello-cli"
readme = "Readme.md"
license = "MIT"
description = "Prints a nice 'Hello World!' message"

[badges]
travis-ci = { repository = "fpoli/rust-hello-cli" }

[dependencies]
clap = "2.26.2"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "hello"
path = "src/main.rs"
