[package]
name = "hello-cli"
version = "0.2.2"
authors = ["Federico Poli <federpoli@gmail.com>"]
repository = "https://github.com/fpoli/rust-hello-cli.git"
homepage = "https://github.com/fpoli/rust-hello-cli"
readme = "README.md"
license = "MIT"
description = "Prints a nice 'Hello World!' message"

[badges]
travis-ci = { repository = "fpoli/rust-hello-cli" }

[dependencies]
clap = "2.26.2"

[[bin]]
name = "hello"
path = "src/main.rs"
